--- a/css/utils.css
+++ b/css/utils.css
@@ -38,6 +38,13 @@
 
 .disabled { opacity: .5 !important }
 .muted { opacity: .7 !important }
+.block { 
+  color: rgba(0, 0, 0, 0.4) !important;
+  background-color: #f5f5f5 !important;
+  border-color: #d9d9d9 !important;
+  box-shadow: none !important;
+  pointer-events: none !important;
+ }
 
 .rounded { border-radius: 3px  !important }
 .pill { border-radius: 50px !important }
